--- a/Lab_1/styleme.css
+++ b/Lab_1/styleme.css
@@ -6,7 +6,9 @@ body{
 }
 
 
-
+a{
+    text-decoration: none;
+}
 
 
 h2{
@@ -24,4 +26,12 @@ h2{
 	text-align: center;
 	font-size: 30pt;
 	font-weight:bolder;
+}
+a:hover{
+    text-decoration: underline;
+}
+
+
+.name::first-letter{
+    font-size: 45px;
 }
